add search component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -74,3 +74,9 @@
       @apply bg-background text-foreground;
     }
   }
+
+@media(min-width:768px){
+ .search__form:has(.text-destructive) button{
+  margin-bottom:calc(1ch + 1.3rem)
+ }
+}
